[tool.poetry]
name = "envolved"
version = "0.5.0"
description = ""
authors = ["ben avrahami <avrahami.ben@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/bentheiii/envolved"
packages = [
    {include="envolved"}
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "*"
flake8 = "^4.0.0"
pytest-cov = "*"
sphinx = "*"
isort = "^5.10.1"
sphinx-rtd-theme = "^1.0.0"
typing-extensions = "^4.0.1"
coverage = "^6.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

