[tool.poetry]
name = "envolved"
version = "1.0.0"
description = ""
authors = ["ben avrahami <avrahami.ben@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/bentheiii/envolved"
packages = [
    {include="envolved"}
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.group.dev.dependencies]
pytest = "*"
sphinx = "*"
sphinx-rtd-theme = "^1.0.0"
typing-extensions = "^4.0.1"
mypy = "*"
pytest-cov = "^4.1.0"
ruff = "^0.1.1"
black = {version = "^23.10.1", python = ">=3.12"}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

